test/integration/bad/new/reject-bad8.stan
 transformed data { reject ( "hello world" while
